schrift und abstände korrigiert

--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
 					</div>
 				</div>
 				<div class="titel">
-					<a href="index.html">der anfang</a>
-					<br>
-					<a href="worldwideweb.html">die dokumentation und das world wide web</a>
+					<p>
+						der anfang
+					</p>
+					<p>
+						<a href="worldwideweb.html"> die dokumentation und das world wide web</a>
+					</p>
 				</div>
 			</div>
 
