verbesserung und hinzufügen von js

--- a/literatur.html
+++ b/literatur.html
@@ -19,8 +19,9 @@
 				</div>
 				<div class="nav">
 					<div class="nav-element">
-						<a href="index.html">dokumentation und</a>
+						dokumentation und
 					</div>
+					<br>
 					<div class="nav-element out">
 						<a href="farbe.html">die farbe</a>
 					</div>
