--- a/worldwideweb.html
+++ b/worldwideweb.html
@@ -5,7 +5,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, intial-scale=1.0">
 		<link rel="stylesheet" href="css/stylesheetIn.css">
-	
+		<script src="jquery-3.3.1.min.js"></script>
+		<script src="javascript.js"></script>
 	</head>
 	<body>
 		
@@ -31,6 +32,7 @@
 					<div class="nav-element out">
 						typografie und
 					</div>
+					<br>
 					<div class="nav-element out">
 						<a href="farbe.html">die farbe</a>
 					</div>
@@ -65,9 +67,30 @@
 					<p>
 						diese webseite ist mein erster versuch zwei kurse und die medien print und web miteinander zu verbinden. 
 						<br>
-						die komplette 60-seitige dokumentation, die im kurs ggI von veruschka götz errbeitet wurde, ist hier nicht vollständig zu sehen, aber einige ausschnitte daraus, sodass ein eindruck des gedruckten exemplars entstehen kann. die webseite selbst wurde mit den kenntnissen aus dem kurs int von arno richter geschrieben.
+						die komplette 60-seitige dokumentation, die im kurs ggI von veruschka götz errbeitet wurde, ist hier nicht vollständig zu sehen, aber einige ausschnitte daraus, sodass ein eindruck des gedruckten exemplars entstehen kann. die webseite selbst wurde mit den kenntnissen aus dem kurs internet technick von arno richter geschrieben.
 					</p>
-					<img src="bilder/2021_01_27_Web_Semesterdokumentation.png">
+					<img id="img" src="bilder/druck0.png">
+
+					<div class="druckNav">
+						<button id="button1" onclick="next0()">das cover</button>
+						<button id="button1" onclick="next1()">der inhalt</button>
+						die seiten:
+						<button id="button2" onclick="next2()">4 - 5</button>
+						<button id="button3" onclick="next3()">18 - 19</button>
+						<button id="button4" onclick="next4()">20 - 21</button>
+						<button id="button5" onclick="next5()">24 - 25</button>
+						<button id="button6" onclick="next6()">34 - 35</button>
+						<button id="button7" onclick="next7()">36 - 37</button>
+						<button id="button8" onclick="next8()">40 - 41</button>
+						<button id="button9" onclick="next9()">42 - 43</button>
+						<button id="button10" onclick="next10()">44 - 45</button>
+						<button id="button11" onclick="next11()">46 - 47</button>
+						<button id="button11" onclick="next12()">52 - 53</button>
+						<button id="button11" onclick="next13()">56 - 57</button>
+						<button id="button11" onclick="next14()">58 - 59</button>
+						<button id="button11" onclick="next15()">das backcover</button>
+					</div>
+			
 					<p>
 						die quellen
 					</p>
