--- a/worldwideweb.html
+++ b/worldwideweb.html
@@ -73,7 +73,7 @@
 
 					<div class="druckNav">
 						<button id="button1" onclick="next0()">das cover</button>
-						<button id="button1" onclick="next1()">der inhalt</button>
+						<button id="button1" onclick="next1()">die ordnung</button>
 						die seiten:
 						<button id="button2" onclick="next2()">4 - 5</button>
 						<button id="button3" onclick="next3()">18 - 19</button>
